really fixed the website's layout on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 10em 0;
 }
 .var-box {
     background-color:cadetblue;
@@ -36,12 +37,6 @@ body {
     display:none;
 }
 
-@media screen and (max-width: 35.4em) {
-    body {
-        min-height:57em;
-    }
-}
-
 @media screen and (min-width: 35.5em) {
     .btn-row-pad {
         display:none;
@@ -53,6 +48,10 @@ body {
     
     .grid-pad {
         padding: 0 1em;
+    }
+
+    body {
+        margin: 0 0;
     }
 }
 
